# cyber_agent

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
config/: config.example.yaml
data/knowledge/architecture/: sample_arch.md
data/knowledge/defense/: ir_process.md
data/knowledge/offense/: redteam_rules.md
data/runtime/: cyber_agent.db
docs/: optimization_plan.md
frontend-lite/: index.html
frontend-lite/assets/: app.js  config.js  style.css
frontend-vue/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend-vue/src/: App.vue  main.js
frontend-vue/src/assets/: main.css
frontend-vue/src/components/: AppShell.vue
frontend-vue/src/router/: index.js
frontend-vue/src/services/: api.js  features.js
frontend-vue/src/stores/: auth.js  chat.js
frontend-vue/src/views/: ChatView.vue  DashboardView.vue  FeatureView.vue  LoginView.vue
scripts/: demo_cli.py  ingest.py
src/cyber_agent_guarded/: __init__.py  app_factory.py  auth.py  config.py  llm.py  policies.py  prompts.py  runtime.py  schemas.py
src/cyber_agent_guarded/agent/: __init__.py  graph.py
src/cyber_agent_guarded/api/: __init__.py  auth.py  chat.py  dependencies.py  system.py
src/cyber_agent_guarded/rag/: __init__.py  document_store.py  ingest.py
src/cyber_agent_guarded/services/: chat_service.py
src/cyber_agent_guarded/storage/: chat_repository.py  database.py  models.py
tests/: test_agent.py  test_auth_api.py  test_policy.py  test_rag.py
(+6 files in other folders)
