[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cyber-agent-guarded"
version = "0.1.0"
description = "Guarded cyber defense and authorized red-team intelligence agent with RAG and LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Security AI Platform Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "chromadb>=0.5.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.11.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/cyber_agent_guarded"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
